# serializer version: 1
# name: test_compute_provenance_multiple_upstreams
  list([
    dict({
      'field_provenance': dict({
        'analysis': 'analysis|2|audio.waveform|audio_',
        'fusion': 'fusion|1|audio.waveform|audio_wa',
      }),
      'sample_provenance': 'analysis|2|audio.waveform|audio_',
      'sample_uid': 1,
    }),
    dict({
      'field_provenance': dict({
        'analysis': 'analysis|2|audio.waveform|audio_',
        'fusion': 'fusion|1|audio.waveform|audio_wa',
      }),
      'sample_provenance': 'analysis|2|audio.waveform|audio_',
      'sample_uid': 2,
    }),
    dict({
      'field_provenance': dict({
        'analysis': 'analysis|2|audio.waveform|audio_',
        'fusion': 'fusion|1|audio.waveform|audio_wa',
      }),
      'sample_provenance': 'analysis|2|audio.waveform|audio_',
      'sample_uid': 3,
    }),
  ])
# ---
# name: test_compute_provenance_single_upstream
  list([
    dict({
      'field_provenance': dict({
        'default': 'default|1|video.audio|video_audi',
      }),
      'sample_provenance': 'default|1|video.audio|video_audi',
      'sample_uid': 1,
    }),
    dict({
      'field_provenance': dict({
        'default': 'default|1|video.audio|video_audi',
      }),
      'sample_provenance': 'default|1|video.audio|video_audi',
      'sample_uid': 2,
    }),
    dict({
      'field_provenance': dict({
        'default': 'default|1|video.audio|video_audi',
      }),
      'sample_provenance': 'default|1|video.audio|video_audi',
      'sample_uid': 3,
    }),
  ])
# ---
